--- a/MacSVG Plugin Projects/macSVG Plugins/PathElementShapeAnimationEditor/PathElementShapeAnimationEditor/en.lproj/PathElementShapeAnimationEditor.xib
+++ b/MacSVG Plugin Projects/macSVG Plugins/PathElementShapeAnimationEditor/PathElementShapeAnimationEditor/en.lproj/PathElementShapeAnimationEditor.xib
@@ -184,6 +184,9 @@ Gw
                     <buttonCell key="cell" type="push" title="Done" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="iDv-LG-MyK">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="system"/>
+                        <string key="keyEquivalent" base64-UTF8="YES">
+DQ
+</string>
                     </buttonCell>
                     <connections>
                         <action selector="doneButtonAction:" target="TBn-54-l6H" id="nkd-0D-gG8"/>
@@ -365,7 +368,7 @@ Gw
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="system"/>
                         <string key="keyEquivalent" base64-UTF8="YES">
-Gw
+DQ
 </string>
                     </buttonCell>
                     <connections>
@@ -703,7 +706,7 @@ Gw
                     </subviews>
                 </customView>
             </subviews>
-            <point key="canvasLocation" x="326" y="501"/>
+            <point key="canvasLocation" x="238" y="625"/>
         </customView>
     </objects>
 </document>
